--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <b>Pengembalian  Ke e-Wallet</b>
 </button>
 <button onclick="window.location=
-'login.html' "style="background-color: VIBGYOR; font-size: 50px;  color: black; height: 100px; border-radius: 10px; margin-top: 60px; width: 90%;">
+'logn.html' "style="background-color: VIBGYOR; font-size: 50px;  color: black; height: 100px; border-radius: 10px; margin-top: 60px; width: 90%;">
 <b>Pengembalian Ke Rekening</b></button><br>
 <br><br><br><br>
 <br><br>
